--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <div id="app">
-        
+        <ul>
+            <li v-for="email in emails" v-if="emails.length === 10">questa è la tua email: {{email}}</li>
+        </ul>
     </div>
     <script type="text/javascript" src="js/myscript.js"></script>
 </body>
